--- a/index.html
+++ b/index.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaibhav portfolio</title>
     <style>
-        h1
-        {
+        h1 {
             color: red;
         }
-        h2{
+
+        h2 {
             color: green;
+        }
+        .container {
+            /* display: flex ; */
         }
     </style>
 </head>
+
 <body>
-    <h1>Hi my portfolio</h1>
-    <H2>
-        Vaibhav Yadav
-    </H2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam accusantium quasi eaque unde, architecto beatae sunt delectus soluta eius voluptate earum autem cumque culpa. Sed corrupti ad animi, natus est ratione consequuntur. A unde ab adipisci laboriosam cupiditate? Possimus voluptatem recusandae quis libero dolor doloribus perspiciatis repudiandae iure, quod delectus alias eos error quia quibusdam, consequuntur nesciunt est facilis impedit nobis reprehenderit nam culpa excepturi maiores labore.</p>
+    <div class="container">
+        <!-- <h1>Hi </h1> -->
+        <div class="name" style="font-size: 2rem;">
+            Vaibhav Yadav
+        </div>
+        <div class="image_sec" >
+            <img src="vaibhav.jpeg" alt="port picture" width="300px;" height="400px;">
+        </div>
+    </div>
+    <div class="desc" style="font-size: 1.5rem;">
+        HI im persuing the 11th from saint judges school , in maths stream.
+        My dream is to go to IIT D/M/C.
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam accusantium quasi eaque unde, architecto beatae
+        sunt delectus soluta eius voluptate earum autem cumque culpa. Sed corrupti ad animi, natus est ratione
+        consequuntur. A unde ab adipisci laboriosam cupiditate? Possimus voluptatem recusandae quis libero dolor
+        doloribus perspiciatis repudiandae iure, quod delectus alias eos error quia quibusdam, consequuntur nesciunt est
+        facilis impedit nobis reprehenderit nam culpa excepturi maiores labore.</p>
 </body>
+
 </html>
